# turbo-genesis-sdk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: discord-notify-merge.yml  discord-notify-pr.yml  discord-notify.yml
src/: audio.rs  bounds.rs  canvas.rs  ffi.rs  input.rs  json.rs  lib.rs  os.rs  program.rs  solana.rs  sys.rs  tween.rs
src/canvas/: circ.rs  macros.rs  path.rs  shaders.rs  sprite.rs
src/canvas/utils/: color.rs  hash.rs
src/ffi/: audio.rs  sys.rs
turbo-genesis-abi/: Cargo.toml  LICENSE  README.md
turbo-genesis-abi/src/: audio.rs  button.rs  gamepad.rs  keyboard.rs  lib.rs  metadata.rs  mouse.rs  pointer.rs
turbo-genesis-ffi/: Cargo.toml  README.md
turbo-genesis-ffi/src/: lib.rs
turbo-genesis-ffi/src/audio/: native.rs  wasm.rs
turbo-genesis-ffi/src/canvas/: native.rs  wasm.rs
turbo-genesis-ffi/src/input/: mod.rs  native.rs  wasm.rs
turbo-genesis-ffi/src/os/client/: native.rs  wasm.rs
turbo-genesis-ffi/src/os/server/: native.rs  wasm.rs
turbo-genesis-ffi/src/sys/: mod.rs  native.rs  wasm.rs
turbo-genesis-macros/: Cargo.toml  README.md
turbo-genesis-macros/src/: lib.rs
turbo-genesis-sdk/: Cargo.toml  README.md
turbo-genesis-sdk/src/: audio.rs  bounds.rs  camera.rs  encoding.rs  http.rs  input.rs  lib.rs  lifecycle.rs  os.rs  serialize.rs  solana.rs  sys.rs  tween.rs
turbo-genesis-sdk/src/canvas/: animation.rs  camera.rs  circ.rs  ellipse.rs  flags.rs  macros.rs  mod.rs  nine_slice.rs  path.rs  quad.rs  rect.rs  shaders.rs  sprite.rs  text.rs  text_box.rs  utils.rs
turbo-genesis-sdk/src/canvas/utils/: color.rs  rect.rs  sprite.rs  text.rs
turbo-genesis-sdk/src/ffi/: audio.rs  canvas.rs  input.rs
turbo-genesis-sdk/src/input/: gamepad.rs  keyboard.rs  mod.rs  mouse.rs  pointer.rs  wheel.rs
turbo-genesis-sdk/src/os/: client.rs  mod.rs
turbo-genesis-sdk/src/os/client/: channel.rs  command.rs  fs.rs  mod.rs
turbo-genesis-sdk/src/os/server/: channel.rs  command.rs  fs.rs  mod.rs
turbo-genesis-sdk/src/sys/: console.rs  env.rs  events.rs  hot.rs  internal.rs  local.rs  macros.rs  mod.rs  random.rs  time.rs
turbo-macros/: Cargo.toml  README.md
turbo-macros/src/: lib.rs
turbo-types/: Cargo.toml
turbo-types/src/: button.rs  gamepad.rs  keyboard.rs  lib.rs  mouse.rs  pointer.rs  wheel.rs
