[package]
name = "turbo-genesis-sdk"
version = "1.8.1"
description = "Turbo Genesis SDK"
license = "MIT"
authors = ["@jozanza (hello@jsavary.com)"]
edition = "2021"
repository = "https://github.com/super-turbo-society/turbo-genesis-sdk"

[lib]
crate-type = ["lib"]

[dependencies]
base64 = "0.21.2"
binary-layout = "3.2.0"
borsh = "<1.0"
bytemuck = { version = "1.15.0", features = ["derive"] }
structstruck = "0.4.1"
paste = "1.0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-sdk = { version = ">=1.17,<2.0", optional = true }
num-traits = "0.2.19"

[features]
no-host = []
# prod = []
solana = ["solana-sdk"]
