[package]
name = "turbo-genesis-sdk"
version = "3.1.0"
description = "Turbo Genesis SDK"
license = "MIT"
authors = ["@jozanza (hello@jsavary.com)"]
edition = "2021"
repository = "https://github.com/super-turbo-society/turbo-genesis-sdk"

[lib]
crate-type = ["lib"]

[dependencies]
base64 = "0.22.1"
borsh = "<=0.10.3"
bytemuck = { version = "1.15.0", features = ["derive"] }
structstruck = "0.4.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1"
solana-sdk = { version = "1.18.26", optional = true }
toml = "0.8.19"
num-traits = "0.2.19"
turbo-macros = "0.2.0"

[features]
no-host = []
solana = ["solana-sdk"]
