[package]
name = "turbo-genesis-abi"
version = "1.0.0-alpha.2"
edition = "2021"
license = "MIT"
authors = ["@jozanza (jozanza@turbo.computer)"]
repository = "https://github.com/super-turbo-society/turbo-genesis-sdk/tree/main/turbo-genesis-abi"
description = "Defines data structures that are passed between the SDK and the wasm host in the TurboGenesis game runtime."

[lib]
crate-type = ["lib"]

[dependencies]
borsh = { version = "1.5", features = ["derive"] }
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"