[package]
name = "turbo-genesis-ffi"
version = "1.0.0-alpha.1"
edition = "2021"
license = "MIT"
authors = ["@jozanza (jozanza@turbo.computer)"]
repository = "https://github.com/super-turbo-society/turbo-genesis-sdk/tree/main/turbo-genesis-ffi"
description = "Defines the foreign function interface for the TurboGenesis game runtime."

[lib]
crate-type = ["lib"]
