[package]
name = "turbo-genesis-macros"
version = "1.0.0-alpha.3"
edition = "2021"
description = "Turbo Genesis SDK Macros"
license = "MIT"
authors = ["@jozanza (jozanza@turbo.computer)"]
repository = "https://github.com/super-turbo-society/turbo-genesis-sdk/tree/main/turbo-genesis-macros"

[lib]
proc-macro = true

[dependencies]
base64 = "0.22"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
syn = { version = "2.0", features = ["full", "extra-traits"] }
toml_edit = "0.22"
turbo-genesis-abi = { version = "1.0.0-alpha.1", path = "../turbo-genesis-abi" }
uuid = "1.17.0"
