[package]
name = "turbo-genesis-sdk"
version = "4.0.0-alpha.35"
description = "Turbo Genesis SDK"
license = "MIT"
authors = ["@jozanza (jozanza@turbo.computer)"]
edition = "2021"
repository = "https://github.com/super-turbo-society/turbo-genesis-sdk/tree/main/turbo-genesis-sdk"

[lib]
crate-type = ["lib"]

[dependencies]
base64 = "0.22"
borsh = { version = "1.0", features = ["derive"] }
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
turbo-genesis-macros = { version = "1.0.0-alpha.9", path = "../turbo-genesis-macros" }
turbo-genesis-abi = { version = "1.0.0-alpha.5", path = "../turbo-genesis-abi" }
turbo-genesis-ffi = { version = "1.0.0-alpha.0", path = "../turbo-genesis-ffi" }
