[package]
name = "turbo-macros"
version = "0.2.0"
edition = "2021"
description = "Turbo Genesis SDK Macros"
license = "MIT"
authors = ["@jozanza (hello@jsavary.com)"]
repository = "https://github.com/super-turbo-society/turbo-genesis-sdk/tree/main/turbo-macros"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
